namespaces/cloud-platform-test-1.k8s.integration.dsd.io/monitoring/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  component: monitoring
