namespaces/cloud-platform-test-1.k8s.integration.dsd.io/monitoring/grafana-dashboard-aggregator.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: grafana-dashboard-aggregator
  name: grafana-dashboard-aggregator
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-dashboard-aggregator
  template:
    metadata:
      labels:
        app: grafana-dashboard-aggregator
    spec:
      serviceAccountName: grafana-dashboard-aggregator
      containers:
      - name: aggregator
        image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/cloud-platform/tools
        command:
        - /bin/sh
        - -c
        - |
          apk add --no-cache bash
          while true; do
            /var/run/bin/grafana-dashboard-aggregator
            sleep 60
          done;
        volumeMounts:
        - name: grafana-dashboard-aggregator
          mountPath: /var/run/bin
          readOnly: true
      volumes:
      - name: grafana-dashboard-aggregator
        configMap:
          name: grafana-dashboard-aggregator
          defaultMode: 0755
