namespaces/cloud-platform-test-1.k8s.integration.dsd.io/monitoring/alertmanager-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-oauth2
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
spec:
  rules:
  - host: alertmanager.apps.cloud-platform-test-1.k8s.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: kube-prometheus-alertmanager
          servicePort: 9093
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-oauth2-proxy
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.apps.cloud-platform-test-1.k8s.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: alertmanager-oauth2-proxy
          servicePort: 4180
        path: /oauth2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: alertmanager-oauth2-proxy
  name: alertmanager-oauth2-proxy
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: alertmanager-oauth2-proxy
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: alertmanager-oauth2-proxy
  name: alertmanager-oauth2-proxy
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: alertmanager-oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: alertmanager-oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        args:
        - -provider=github
        - -github-org=ministryofjustice
        - -github-team=webops
        - -email-domain=*
        - -upstream=file:///dev/null
        - -http-address=0.0.0.0:4180
        - -client-id=$(OAUTH2_CLIENT_ID)
        - -client-secret=$(OAUTH2_CLIENT_SECRET)
        - -cookie-secret=$(OAUTH2_COOKIE_SECRET)
        image: docker.io/machinedata/oauth2_proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4180
          protocol: TCP
