namespaces/cloud-platform-test-1.k8s.integration.dsd.io/monitoring/grafana-proxy-live.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-proxy
  namespace: monitoring
spec:
  rules:
  - host: grafana.apps.cloud-platform-live-0.k8s.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: grafana-proxy
          servicePort: 80
  

---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: grafana-proxy
  name: grafana-proxy
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: grafana-proxy

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: grafana-proxy
  name: grafana-proxy
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: grafana-proxy
  template:
    metadata:
      labels:
        k8s-app: grafana-proxy
    spec:
      containers:
      - name: grafana-proxy
        image: evry/oidc-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/local/openresty/nginx/conf/sites/
        - name: auth-script
          mountPath: /usr/local/openresty/nginx/lua
      volumes:
      - name: config
        configMap:
          name: grafana-proxy-config
      - name: auth-script
        configMap:
          name: grafana-proxy-auth-script
