namespaces/cloud-platform-test-1.k8s.integration.dsd.io/monitoring/oidc-proxy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oidc-proxy
  namespace: monitoring
spec:
  rules:
  - host: prometheus.apps.cloud-platform-test-1.k8s.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: oidc-proxy
          servicePort: 80
      - path: /-/healthy
        backend:
          serviceName: kube-prometheus
          servicePort: 9090
  - host: alertmanager.apps.cloud-platform-test-1.k8s.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: oidc-proxy
          servicePort: 80
      - path: /-/healthy
        backend:
          serviceName: kube-prometheus-alertmanager
          servicePort: 9093

---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oidc-proxy
  name: oidc-proxy
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: oidc-proxy

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: oidc-proxy
  name: oidc-proxy
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oidc-proxy
  template:
    metadata:
      labels:
        k8s-app: oidc-proxy
    spec:
      containers:
      - name: oidc-proxy
        image: evry/oidc-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/local/openresty/nginx/conf/sites/
        - name: auth-script
          mountPath: /usr/local/openresty/nginx/lua
      volumes:
      - name: config
        configMap:
          name: oidc-proxy-config
      - name: auth-script
        configMap:
          name: oidc-proxy-auth-script
